<resources>
    <string name="app_name">PersonalTasks</string>

    <string name="titulo">Título</string>
    <string name="descricao">Descrição</string>
    <string name="data_limite">Data Limite</string>
    <string name="salvar">Salvar</string>
    <string name="cancelar">Cancelar</string>

    <string name="detalhes">Detalhes</string>
    <string name="editar">Editar</string>
    <string name="excluir">Excluir</string>

    <string name="nova_tarefa">Nova Tarefa</string>

    <string name="nenhuma_tarefa_cadastrada">Nenhuma tarefa cadastrada.</string>
    <string name="tarefa_cumprida">Tarefa Cumprida</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="registrar">Registrar</string>
    <string name="nenhuma_tarefa_exclu_da">Nenhuma tarefa excluída</string>
    <string name="reativar_tarefa">Reativar tarefa</string>
    <string name="tarefas_exclu_das">Tarefas Excluídas</string>
    <string name="logout">Logout</string>

    <string-array name="opcoes_prioridade">
        <item>Alta</item>
        <item>Média</item>
        <item>Baixa</item>
    </string-array>

</resources>
